examples/test/testpolicy3645.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3645
  namespace: namespace378
spec:
  podSelector:
    matchLabels:
      key34: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value32
          key45: value34
      podSelector:
        matchLabels:
          key48: value3
          key36: value20
